Update project configuration and improve WebSocket URL
- Modify .gitignore to correct output directory name.
- Add "type": "module" to package.json for ES module support.
- Update WebSocket URL in smoke_dashboard.js to include path.
- Change script import path in index.html to match new build output.

--- a/viz_web/index.html
+++ b/viz_web/index.html
@@ -585,7 +585,7 @@
     </div>
 
     <script type="module">
-        import init, { EvolutionMonitor } from './pkg/viz_web.js';
+        import init, { EvolutionMonitor } from './viz_web-911b1a6f8a827577.js';
 
         let monitor = null;
         let animationId = null;
